client/src/components/Footer/Footer.module.css
.footer {
  color: #ffffff;
  padding: 3rem 2rem;
  width: 100%;
  background-image: linear-gradient(
    to bottom,
    #121a36 50%,
    rgba(250, 105, 19, 0.6) 220%
  );
}

.container {
  max-width: 1100px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: flex-end; /* Alinha os blocos pela base */
  gap: 2rem;
}

.leftSection {
  display: flex;
  font-size: 14px;
  flex-direction: column;
  font-family: 'Open Sans', Arial, sans-serif;
  font-weight: 400;
  gap: 0.5rem;
  align-items: center;
  color: #ffffff;
}

.rightSection {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 1.5rem;
}

.socialIcons {
  display: flex;
  width: 100%;
  justify-content: space-evenly;

  gap: 20px;
  margin-bottom: 8px;
}

.iconCircle {
  background-color: white;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #0a192f; /* Cor azul marinho do fundo */
  transition: all 0.2s ease-in-out;
}

.iconCircle:hover {
  transform: translateY(-2px);
  background-color: #d4a017;
}

.legalLink {
  color: rgb(219, 188, 116); /* Tom dourado da imagem */
  text-decoration: none;
  font-family: 'Open Sans', Arial, sans-serif;
  font-size: 0.9rem;
  font-weight: 500;
}

/* Responsividade para telas menores */
@media (max-width: 1000px) {
  .iconCircle {
    width: 40px;
    height: 40px;
  }
}

@media (max-width: 768px) {
  .leftSection {
    font-size: 9px;
  }
  .container {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
  .rightSection {
    align-items: center;
  }
}

